--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: unicode
   database: npr_bumps_development
   pool: 5
-  username: npr_bumps
+  username: postgres
   password:
 
 test:
@@ -11,7 +11,7 @@ test:
   encoding: unicode
   database: npr_bumps_test
   pool: 5
-  username: npr_bumps
+  username: postgres
   password:
 
 production:
