--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -6,7 +6,7 @@
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
-    "bootstrap-sass-official": "~3.1.0",
+    "bootstrap": "~3.0.3",
     "angular-resource": "1.2.15",
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
