--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   "homepage": "https://github.com/slicebo123/npr_bumps",
   "devDependencies": {
     "browserify": "^8.0.1",
-    "watchify": "^2.2.1"
+    "reactify": "0.17.1",
+    "watchify": "^2.2.1",
+    "react": "0.12.2"
+  },
+  "scripts": {
+    "bundle": "browserify -t reactify app/assets/javascripts/index.js -o app/assets/javascripts/bundle.js",
+    "watch-js": "watchify -t reactify app/assets/javascripts/index.js -o app/assets/javascripts/bundle.js",
+    "start": "npm run watch-js & rails s"
   }
 }
