--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/slicebo123/npr_bumps",
   "devDependencies": {
     "browserify": "^8.0.1",
+    "material-ui": "^0.5.0",
     "reactify": "0.17.1",
     "watchify": "^2.2.1",
     "react": "0.12.2"
