--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "homepage": "https://github.com/slicebo123/npr_bumps",
   "devDependencies": {
     "browserify": "^8.0.1",
+    "lodash": "^2.4.1",
     "material-ui": "^0.5.0",
+    "react": "0.12.2",
     "reactify": "0.17.1",
-    "watchify": "^2.2.1",
-    "react": "0.12.2"
+    "watchify": "^2.2.1"
   },
   "scripts": {
     "bundle": "browserify -t reactify app/assets/javascripts/index.js -o app/assets/javascripts/bundle.js",
