--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "material-ui": "^0.5.0",
     "react": "0.12.2",
     "reactify": "0.17.1",
+    "react-tap-event-plugin": "^0.1.3",
     "watchify": "^2.2.1"
   },
   "scripts": {
