--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "browserify": "^8.0.1",
     "lodash": "^2.4.1",
-    "material-ui": "^0.5.0",
+    "material-ui": "callemall/material-ui#09818bb42e3ee66dcebf419293a6e40108918d21",
     "react": "0.12.2",
     "reactify": "0.17.1",
     "react-tap-event-plugin": "^0.1.3",
