--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "devDependencies": {
     "browserify": "^8.0.1",
     "lodash": "^2.4.1",
+    "material-design-fonticons": "^1.0.0",
     "material-ui": "seanders/material-ui#35b424c26a006d48673b8829256ceec11581029d",
     "react": "0.12.2",
-    "reactify": "0.17.1",
     "react-tap-event-plugin": "^0.1.3",
+    "reactify": "0.17.1",
     "watchify": "^2.2.1"
   },
   "scripts": {
